<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".ui.settings.SettingsFragment">

    <Button
            android:id="@+id/button_save_settings"
            android:layout_width="380dp"
            android:layout_height="75dp"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:helperText="@string/backend_url_input_info"
            android:hint="Server URL"
            app:hintEnabled="false"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/gps_input"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.512"
            android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Server URL" android:id="@+id/backend_url_input"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:helperText="@string/location_input_info"
            android:hint="@string/location_label"
            app:hintEnabled="false"
            android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            android:id="@+id/location_input_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_label" android:id="@+id/location_input"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
            android:text="@string/gps_position"
            android:layout_width="168dp"
            android:layout_height="13dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/location_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            android:id="@+id/gps_input" app:layout_constraintHorizontal_bias="0.1" android:textSize="18sp"
            android:checked="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>
